@@ -94,6 +94,8 @@ DayOfTheWeek, Month DD, YYYY / The Tcpdump Group
       IP: Update the offload "presumed TSO" case for "BIG TCP".
     User interface:
        Print an error message about --count without -r or -V.
+       Make commands suh as "tcpdump -d ip[4:4] == -1" work rather than
+         complaining about -1 being an illegal flag.
 
 Tuesday, December 30, 2025 / The Tcpdump Group
   Summary for 4.99.6 tcpdump release
